--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -12,7 +12,7 @@ body {
 
 .bannerBgImage {
     height: 100vh;
-    background:url(https://github.com/Nandamohan12/Portfolio/blob/main/Images/home%20(2).jpg);
+    background:url(https://github.com/Nandamohan12/Portfolio/blob/main/Images/Home.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
